[style] fixed shifting in front page in client

--- a/client/assets/styles.css
+++ b/client/assets/styles.css
@@ -12,8 +12,6 @@ html {
 body {
   font-family: Lora, "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #fff;
-  /*webkit-tap-highlight-color: rgba(255, 255, 255, .2);*/
-  padding-top: 50px;
 }
 
 .btn,
@@ -28,28 +26,8 @@ h6 {
   letter-spacing: 1px;
 }
 
-
-/*p {
-  margin: 0 0 25px;
-  font-size: 18px;
-  line-height: 1.5
-}*/
-
-
-/*@media(min-width:768px) {
-  p {
-    margin: 0 0 35px;
-    font-size: 20px;
-    line-height: 1.6
-  }
-}*/
-
 a {
   color: #42dca3;
-  /* Delete? */
-  /*-webkit-transition: all .2s ease-in-out;
-  -moz-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out*/
 }
 
 a:focus,
@@ -82,39 +60,9 @@ a:hover {
   outline: 0
 }
 
-
-/* to delete */
-
-
-/*.navbar-custom .navbar-brand .navbar-toggle {
-  padding: 4px 6px;
-  font-size: 16px;
-  color: #fff
-}*/
-
-
-/* to delete */
-
-
-/*.navbar-custom .navbar-brand .navbar-toggle:active,
-.navbar-custom .navbar-brand .navbar-toggle:focus {
-  outline: 0
-}*/
-
 .navbar-custom a {
   color: #fff
 }
-
-
-/* to delete */
-
-
-/*.navbar-custom .nav li a {
-  -webkit-transition: background .3s ease-in-out;
-  -moz-transition: background .3s ease-in-out;
-  transition: background .3s ease-in-out
-}
-*/
 
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .nav li a:hover {
@@ -162,7 +110,8 @@ a:hover {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
-  -o-background-size: cover -webkit-animation: fadein 2s;
+  -o-background-size: cover;
+  -webkit-animation: fadein 2s;
   -moz-animation: fadein 2s;
   -ms-animation: fadein 2s;
   -o-animation: fadein 2s;
@@ -302,12 +251,6 @@ a:hover {
   -o-background-size: cover
 }
 
-#map {
-  width: 100%;
-  height: 200px;
-  margin-top: 100px
-}
-
 @media(min-width:767px) {
   .content-section {
     padding-top: 250px
@@ -324,24 +267,6 @@ a:hover {
 .btn {
   border-radius: 0;
   font-weight: 400;
-  /* Delete? */
-  /*-webkit-transition: all .3s ease-in-out;
-  -moz-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out*/
-}
-
-.btn-default {
-  border: 1px solid #42dca3;
-  color: #42dca3;
-  background-color: transparent
-}
-
-.btn-default:focus,
-.btn-default:hover {
-  border: 1px solid #42dca3;
-  outline: 0;
-  color: red;
-  background-color: red;
 }
 
 #dropZone,
@@ -399,6 +324,8 @@ img::-moz-selection {
   background: 0 0
 }
 
+/*File Input Styles*/
+
 #filesId {
   width: 100%;
   height: 100%;
@@ -415,6 +342,7 @@ img::-moz-selection {
   color: #000;
   border-width: 3px;
   border-style: dotted;
+  margin-top: 15%;
 }
 
 #dropZoneText {
@@ -432,6 +360,8 @@ img::-moz-selection {
   opacity: .9;
   transform: scale(1.01, 1.01)
 }
+
+/*Lightning button styles*/
 
 @-webkit-keyframes yellowPulse {
   from,
@@ -617,4 +547,10 @@ img {
   margin: auto;
   border: 1px;
   padding: 10px;
+}
+
+.buttonsBox {
+}
+
+.displayBox {
 }
